# google-ads-transparency-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml
src/google_ads_transparency_mcp/: __init__.py  __main__.py  parser.py  scraper.py  server.py
