[project]
name = "google-ads-transparency-mcp"
version = "0.1.0"
description = "MCP server for the Google Ads Transparency Center — look up any advertiser's ads without an API key"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Sam Town", email = "hello@samuel.town" }]
keywords = [
    "google-ads",
    "ads-transparency",
    "mcp",
    "model-context-protocol",
    "scraper",
    "advertising",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "mcp>=1.0.0",
    "requests>=2.31.0",
]

[project.urls]
Homepage = "https://github.com/block-town/google-ads-transparency-mcp"
Repository = "https://github.com/block-town/google-ads-transparency-mcp"
Issues = "https://github.com/block-town/google-ads-transparency-mcp/issues"

[project.scripts]
google-ads-transparency-mcp = "google_ads_transparency_mcp.__main__:mcp.run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/google_ads_transparency_mcp"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
